--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                         <span>Clique aqui e Veja o que estão dizendo sobre nossas vídeo partituras premium!</span>
                     </a>
                 </div>
-                <p class="hero-subtitle">
-                    Já possuímos um acervo com mais de <strong>200 temas</strong>!! Nossa plataforma é exclusiva de vídeo partituras, todo o material está organizado em pastas separadas com nome de cada música, assim você não perde horas e horas procurando o material, tudo está bem organizado para economizar seu tempo!
+                <p>
+                    <strong>
+                        Já possuímos um acervo com <span style="color: #1150e4;">mais de <strong>180 temas!! </span> <br>
+                        <br></strong><span style="color: #1150e4;">Nosso Material é exclusiva de vídeo partituras</span>, todo o material está organizado em pastas separadas com nome de cada música, assim você não perde horas e horas procurando o material
+                    </strong>!
                 </p>
                 
             </div>
@@ -51,7 +54,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Por Que Nossas Vídeo Partituras São Diferentes?</h2>
-                <p>Transformamos o aprendizado musical em uma experiência visual e auditiva premium</p>
+                <p><span style="color: #f3f4f5;"><span style="color: #f3f4f5;">Transformamos o aprendizado musical em uma experiência visual e auditiva premium</span></span></p>
             </div>
             
             <div class="features-grid">
@@ -59,48 +62,48 @@
                     <div class="feature-icon">
                         <i class="fas fa-video"></i>
                     </div>
-                    <h3>Qualidade Premium</h3>
-                    <p>Produções próprias que você não encontra no YouTube! Qualidade impecável nos playbacks e partituras.</p>
+                    <h3><span style="color: #1150e4;">Qualidade Premium</span></h3>
+                    <p><span style="color: #f3f4f5;">Produções próprias que você não encontra no YouTube! Qualidade impecável nos playbacks e partituras.</span></p>
                 </div>
 
                 <div class="feature-card fade-in-up" data-aos-delay="100">
                     <div class="feature-icon">
                         <i class="fas fa-folder-open"></i>
                     </div>
-                    <h3>Organização Perfeita</h3>
-                    <p>Todo o material em pastas separadas com nome de cada música. Não perca tempo procurando!</p>
+                    <h3><span style="color: #1150e4 ;">Organização Perfeita</span></h3>
+                    <p><span style="color: #fff;">Todo o material em pastas separadas com nome de cada música. Não perca tempo procurando!</span></p>
                 </div>
 
                 <div class="feature-card fade-in-right" data-aos-delay="200">
                     <div class="feature-icon">
                         <i class="fas fa-mobile-alt"></i>
                     </div>
-                    <h3>Acesso Sem Internet</h3>
-                    <p>Baixe todas as vídeo partituras no seu celular, computador ou tablet e use sem internet!</p>
+                    <h3><span style="color: #1150e4 ;">Acesso Sem Internet</span></h3>
+                    <p><span style="color: #f3f4f5;">Baixe todas as vídeo partituras no seu celular, computador ou tablet e use sem internet!</span></p>
                 </div>
 
                 <div class="feature-card fade-in-left" data-aos-delay="300">
                     <div class="feature-icon">
                         <i class="fas fa-hand-holding-heart"></i>
                     </div>
-                    <h3>Praticidade Total</h3>
-                    <p>Dê play e saia tocando! Sem partituras impressas e playbacks MP3 separados. Tudo na palma da mão.</p>
+                    <h3><span style="color: #1150e4 ;">Praticidade Total</span></h3>
+                    <p><span style="color: #f3f4f5;">Dê play e saia tocando! Sem partituras impressas e playbacks MP3 separados. Tudo na palma da mão.</span></p>
                 </div>
 
                 <div class="feature-card fade-in-up" data-aos-delay="400">
                     <div class="feature-icon">
                         <i class="fas fa-globe-americas"></i>
                     </div>
-                    <h3>200+ Temas</h3>
-                    <p>Nacionais e internacionais! Pop, Rock, MPB, Bossa, Samba, Pagode e muito mais!</p>
+                    <h3><span style="color: #1150e4 ;">200+ Temas</span></h3>
+                    <p><span style="color: #f3f4f5;">Nacionais e internacionais! Pop, Rock, MPB, Bossa, Samba, Pagode e muito mais!</span></p>
                 </div>
 
                 <div class="feature-card fade-in-right" data-aos-delay="500">
                     <div class="feature-icon">
                         <i class="fas fa-shield-alt"></i>
                     </div>
-                    <h3>100% Seguro</h3>
-                    <p>Equipe de músicos sérios com garantia de 7 dias. Se não gostar, devolvemos seu dinheiro!</p>
+                    <h3><span style="color: #1150e4 ;">100% Seguro</span></h3>
+                    <p><span style="color: #f3f4f5;">Equipe de músicos sérios com garantia de 7 dias. Se não gostar, devolvemos seu dinheiro!</span></p>
                 </div>
             </div>
         </div>
@@ -131,7 +134,7 @@
   <div class="container">
     <div class="section-title">
       <h2>Olha só alguns exemplos que você vai receber!</h2>
-      <p>Conheça alguns dos 200+ temas disponíveis em nossa plataforma</p>
+      <p><span style="color: #f3f4f5;">Conheça alguns dos 200+ temas disponíveis em nossa plataforma</span></p>
     </div>
 
     <div class="examples-grid">
@@ -141,25 +144,10 @@
           <div class="example-icon"><i class="fas fa-music"></i></div>
           <div class="example-title"><h3>Menina Veneno</h3><span class="music-tag nacional">Nacional</span></div>
         </div>
-        <p class="example-description">Que tal começar com o clássico Menina Veneno? O solo de sax icônico dessa música vai fazer você reviver um dos maiores hits da música brasileira.</p>
+        <p class="example-description"><span style="color: #f3f4f5;">Que tal começar com o clássico Menina Veneno? O solo de sax icônico dessa música vai fazer você reviver um dos maiores hits da música brasileira.</span></p>
         <div class="example-video">
           <div class="video-wrapper" data-youtube-id="vmpqoS2BgN4">
             <iframe data-src-base="https://www.youtube.com/embed/vmpqoS2BgN4" title="Menina Veneno - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div class="video-overlay" aria-hidden="true"><div class="msg" style="display:none"></div></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Uma Brasileira -->
-      <div class="example-item">
-        <div class="example-header">
-          <div class="example-icon"><i class="fas fa-guitar"></i></div>
-          <div class="example-title"><h3>Uma Brasileira</h3><span class="music-tag nacional">Nacional</span></div>
-        </div>
-        <p class="example-description">Temos também, Uma Brasileira, dos Paralamas do Sucesso, traz aquela vibe contagiante que é impossível não amar.</p>
-        <div class="example-video">
-          <div class="video-wrapper" data-youtube-id="_eBWSJa0Mog">
-            <iframe data-src-base="https://www.youtube.com/embed/_eBWSJa0Mog" title="Uma Brasileira - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="video-overlay" aria-hidden="true"><div class="msg" style="display:none"></div></div>
           </div>
         </div>
@@ -174,7 +162,7 @@
         <p class="example-description">Internacionais? Claro que sim! Se você é fã de hits latinos, vai adorar Vivir Sin Aire, um sucesso absoluto da banda Maná – perfeito para tocar e emocionar.</p>
         <div class="example-video">
           <div class="video-wrapper" data-youtube-id="ho6kZjBszIU">
-            <iframe data-src-base="https://www.youtube.com/embed/ho6kZjBszIU" title="Vivir Sin Aire - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe data-src-base="https://www.youtube.com/embed/_eBWSJa0Mog" title="Vivir Sin Aire - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="video-overlay" aria-hidden="true"><div class="msg" style="display:none"></div></div>
           </div>
         </div>
@@ -189,7 +177,7 @@
         <p class="example-description">E para os apaixonados por rock, confira o clássico Your Love! Preste atenção na qualidade impecável dos playbacks e das partituras!</p>
         <div class="example-video">
           <div class="video-wrapper" data-youtube-id="uYG7VA-kxMI">
-            <iframe data-src-base="https://www.youtube.com/embed/uYG7VA-kxMI" title="Your Love - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe data-src-base="https://www.youtube.com/embed/ho6kZjBszIU" title="Your Love - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="video-overlay" aria-hidden="true"><div class="msg" style="display:none"></div></div>
           </div>
         </div>
