--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="hero-content fade-in-up">
                 <h1>
-                    Tenha acesso agora mesmo a <strong>maior plataforma de VÍDEO PARTITURAS</strong> para saxofone da internet!
+                    Tenha acesso agora mesmo a <strong>maior material de VÍDEO PARTITURAS</strong> para saxofone da internet!
                 </h1>
 
                 <!-- Link do YouTube -->
@@ -205,8 +205,12 @@
           <div class="example-title"><h3>E Muito Mais!</h3><span class="music-tag todos">200+ Temas</span></div>
         </div>
         <p class="example-description">E isso é só o começo! Com mais de 200 temas em diversos estilos, nossas Vídeo Partituras Premium oferecem tudo o que você precisa para suas apresentações, sem perder tempo e com a qualidade que você merece.</p>
-        <div class="example-cta"><button class="btn btn-primary btn-large" onclick="openCheckout()"><i class="fas fa-download"></i> Ver Todos os 200+ Temas</button></div>
-      </div>
+        <div class="example-cta">
+    <a href="#preco" class="btn btn-primary btn-large">
+        <i class="fas fa-download"></i> Garantir agora o material
+    </a>
+</div>
+
     </div>
   </div>
 
