--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="example-icon"><i class="fas fa-globe"></i></div>
           <div class="example-title"><h3>Vivir Sin Aire</h3><span class="music-tag internacional">Internacional</span></div>
         </div>
-        <p class="example-description">Internacionais? Claro que sim! Se você é fã de hits latinos, vai adorar Vivir Sin Aire, um sucesso absoluto da banda Maná – perfeito para tocar e emocionar.</p>
+        <p class="example-description"><span style="color: #f3f4f5;">Internacionais? Claro que sim! Se você é fã de hits latinos, vai adorar Vivir Sin Aire, um sucesso absoluto da banda Maná – perfeito para tocar e emocionar.</span></p>
         <div class="example-video">
           <div class="video-wrapper" data-youtube-id="ho6kZjBszIU">
             <iframe data-src-base="https://www.youtube.com/embed/_eBWSJa0Mog" title="Vivir Sin Aire - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -174,7 +174,7 @@
           <div class="example-icon"><i class="fas fa-drum"></i></div>
           <div class="example-title"><h3>Your Love</h3><span class="music-tag rock">Rock</span></div>
         </div>
-        <p class="example-description">E para os apaixonados por rock, confira o clássico Your Love! Preste atenção na qualidade impecável dos playbacks e das partituras!</p>
+        <p class="example-description"><span style="color: #f3f4f5;">E para os apaixonados por rock, confira o clássico Your Love! Preste atenção na qualidade impecável dos playbacks e das partituras!</span></p>
         <div class="example-video">
           <div class="video-wrapper" data-youtube-id="uYG7VA-kxMI">
             <iframe data-src-base="https://www.youtube.com/embed/ho6kZjBszIU" title="Your Love - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -189,7 +189,7 @@
           <div class="example-icon"><i class="fas fa-heart"></i></div>
           <div class="example-title"><h3>Depois do Prazer</h3><span class="music-tag samba">Samba/Pagode</span></div>
         </div>
-        <p class="example-description">Samba e pagode? É claro que não poderia faltar! Depois do Prazer, do SPC, é apenas um exemplo da nossa seleção de ritmos brasileiros.</p>
+        <p class="example-description"><span style="color: #f3f4f5;">Samba e pagode? É claro que não poderia faltar! Depois do Prazer, do SPC, é apenas um exemplo da nossa seleção de ritmos brasileiros.</span></p>
         <div class="example-video">
           <div class="video-wrapper" data-youtube-id="uYG7VA-kxMI">
             <iframe data-src-base="https://www.youtube.com/embed/uYG7VA-kxMI" title="Depois do Prazer - Vídeo Partitura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -204,7 +204,7 @@
           <div class="example-icon"><i class="fas fa-star"></i></div>
           <div class="example-title"><h3>E Muito Mais!</h3><span class="music-tag todos">200+ Temas</span></div>
         </div>
-        <p class="example-description">E isso é só o começo! Com mais de 200 temas em diversos estilos, nossas Vídeo Partituras Premium oferecem tudo o que você precisa para suas apresentações, sem perder tempo e com a qualidade que você merece.</p>
+        <p class="example-description"><span style="color: #f3f4f5;">E isso é só o começo! Com mais de 200 temas em diversos estilos, nossas Vídeo Partituras Premium oferecem tudo o que você precisa para suas apresentações, sem perder tempo e com a qualidade que você merece.</span></p>
         <div class="example-cta">
     <a href="#preco" class="btn btn-primary btn-large">
         <i class="fas fa-download"></i> Garantir agora o material
