--- a/index.html
+++ b/index.html
@@ -566,10 +566,13 @@
                         <li>Acesso Imediato após Pagamento</li>
                     </ul>
                     
-                    <button class="btn btn-primary btn-large" onclick="openCheckout()" style="width: 100%; margin-top: 2rem;">
-                        <i class="fas fa-shopping-cart"></i>
-                        Clique aqui e aproveite a promoção das vídeo partituras
-                    </button>
+                    <button class="btn btn-primary btn-large" 
+        onclick="window.location.href='https://pay.cakto.com.br/zk3ecby_648679'" 
+        style="width: 100%; margin-top: 2rem;">
+    <i class="fas fa-shopping-cart"></i>
+    Clique aqui e aproveite a promoção das vídeo partituras
+</button>
+
                     
                     <div style="text-align: center; margin-top: 1.5rem; color: var(--text-gray); font-size: 0.9rem;">
                         <i class="fas fa-bolt" style="color: var(--accent-color); margin-right: 0.5rem;"></i>
