--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
                 Tenha acesso agora mesmo a <strong>maior material de VÍDEO PARTITURAS</strong> para saxofone da internet!
             </h1>
 
-            <!-- Link do YouTube -->
-            <div class="video-link-container">
-                <a href="https://youtube.com" target="_blank" class="youtube-link">
-                    <i class="fab fa-youtube"></i>
-                    <span>Clique aqui e Veja o que estão dizendo sobre nossas vídeo partituras premium!</span>
-                </a>
-            </div>
+            
+<!-- Link do YouTube -->
+            <div class="video-container">
+    <iframe 
+        width="100%" 
+        height="315" 
+        src="https://www.youtube.com/embed/qMOaQcg3RRU" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+    </iframe>
+</div>
+
             <p>
                 <strong>
                     Já possuímos um acervo com <span style="color: #56AAF4;">mais de <strong>200 temas!! </span> <br>
