--- a/index.html
+++ b/index.html
@@ -33,17 +33,16 @@
 
             
 <!-- Link do YouTube -->
-            <div class="video-container">
+<div class="video-embed-clean">
     <iframe 
-        width="100%" 
-        height="315" 
-        src="https://www.youtube.com/embed/qMOaQcg3RRU" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        src="https://www.youtube.com/embed/qMOaQcg3RRU"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen>
     </iframe>
 </div>
+
 
             <p>
                 <strong>
