--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 
             
 <!-- Link do YouTube -->
-<div class="video-embed-clean">
+<div class="video-container">
     <iframe 
-        src="https://www.youtube.com/embed/qMOaQcg3RRU"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        width="100%" 
+        height="315" 
+        src="https://www.youtube.com/embed/qMOaQcg3RRU" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen>
     </iframe>
 </div>
