--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 </ul>
                 
                 <button class="btn btn-primary btn-large" 
-                    onclick="window.location.href='https://go.pepperpay.com.br/9yquc'" 
+                    onclick="window.location.href='https://pay.cakto.com.br/pe7or9r'" 
                     style="width: 100%; margin-top: 2rem;">
                     <i class="fas fa-shopping-cart"></i>
                     Clique aqui e aproveite a promoção das vídeo partituras
