--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 </ul>
                 
                 <button class="btn btn-primary btn-large" 
-                    onclick="window.location.href='https://pay.cakto.com.br/pe7or9r'" 
+                    onclick="window.location.href='https://pay.kirvano.com/47ff8107-0a82-424c-b105-808cfe984da3'" 
                     style="width: 100%; margin-top: 2rem;">
                     <i class="fas fa-shopping-cart"></i>
                     Clique aqui e aproveite a promoção das vídeo partituras
